tests/pass/run/imported_namespace_parity/main.kira
import support as Support

@Main
function main() {
    print(Support.value())
    return
}
