tests/fail/semantics/inheritance_cycle/main.kira
class Left extends Right {}
class Right extends Left {}

@Main
function entry() {
    return
}
